design fixes; sign-up slides working on mobile?

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,14 +3,15 @@
 @tailwind utilities;
 
 html {
-  @apply w-screen overflow-x-hidden scrollbar-thin scrollbar-track-gray-100 scrollbar-thumb-gray-400 hover:scrollbar-thumb-gray-500;
+  @apply overflow-hidden;
 }
+
 * {
   -webkit-tap-highlight-color: transparent;
 }
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+
+div {
+  @apply scrollbar-thin scrollbar-track-gray-100 scrollbar-thumb-gray-400 hover:scrollbar-thumb-gray-500;
 }
 
 @layer base {
